Changes: 1.5.4b.1 - Velocity Control

--- a/Courses/Course_1/Module_5/Week_4b/1.5.4b.1 - Velocity Control.md
+++ b/Courses/Course_1/Module_5/Week_4b/1.5.4b.1 - Velocity Control.md
@@ -11,5 +11,142 @@ Instructors:
 University: Rice University
 Finish:
 ---
-# Introduction
+# Introducción
 
+En esta clase se hablará sobre control de dirección de los objetos, controlando la velocidad en la que los objetos se mueven.
+
+> [!Notas] #### Example 1.5.4b.1.1 - Code Link
+> 
+> https://py2.codeskulptor.org/#examples-position_control.py
+
+**Code example 1.5.4b.1: Position Control**
+
+```Python
+# control the position of a ball using the arrow keys
+# modules/libraries
+
+import simplegui
+
+# Initialize globals
+
+WIDTH = 600
+HEIGHT = 400
+BALL_RADIUS = 20
+
+ball_position = [WIDTH / 2, HEIGHT / 2]
+
+# define event handlers
+
+def draw(canvas):
+	canvas.draw_circle(ball_position, BALL_RADIUS, 2, "red", "white")
+
+def keydown(key):
+	vel = 4
+	if key == simplegui.KEY_MAP["left"]:
+		ball_position[0] -= vel
+	elif key == simplegui.KEY_MAP["right"]
+		ball_position[0] += vel
+	elif key == simplegui.KEY_MAP["down"]
+		ball_position[1] += vel
+	elif key == simplegui.KEY_MAP["up"]
+		ball_position[1] -= vel
+# create frame
+
+frame = simplegui.create_frame("Position ball control", WIDTH, HEIGHT)
+
+# register events handlers
+frame.set_draw_handler(draw)
+frame.set_keydown_handler(keydown)
+
+# start frame
+frame.start()
+```
+---
+# Control Position VS Velocity
+## Update position
+
+Para cambiar la posición del punto, debemos realizar los cambios en el key handler, esos cambios son los responsables de cambiar el valor de la posición del punto (`p`), que nos permitirá cambiarlo de lugar (***Code example 1.5.4b.1***):
+
+**Position control of `p`**
+
+***No update in draw handler***
+
+**Position update in key handler**
+
+Left arrow -> `p[0] -= c`
+Right arrow -> `p[0] += c`
+Up arrow -> `p[1] -= c`
+Down arrow -> `p[1] += c`
+
+## Update Velocity
+
+Para cambiar la velocidad (`v`) de `p`, debemos hacer dos cosas, primero debemos actualizar constantemente la posición de `p` en el draw handler, cuando presionemos una tecla, los valores de `v` se actualizarán al presionar una tecla, aumentando o reduciendo su valor en el key handler,, estos cambios en `v` actualizarán la posición de `p`, logrando un efecto de aceleración o desaceleración en `p` (***Code example 1.5.4b.1***):
+
+**Velocity control of point `p`**
+
+***Position update in draw handler***
+
+`p[0] += v[0]`
+`p[1] += v[1]`
+
+*V = velocity*
+
+**Position update in key handler**
+
+Left arrow -> `v[0] -= c`
+Right arrow -> `v[0] += c`
+Up arrow -> `v[1] -= c`
+Down arrow -> `v[1] += c`
+
+> [!Notas] #### Example 1.5.4b.1.2 - Code Link
+> 
+> https://py2.codeskulptor.org/#examples-velocity_control.py
+
+**Code example 1.5.4b.1.2: Velocity Control**
+
+```Python
+# control the velocity of a ball using the arrow keys
+# modules/libraries
+
+import simplegui
+
+# Initialize globals
+WIDTH = 600
+HEIGHT = 400
+BALL_RADIUS = 20
+
+ball_pos = [WIDTH / 2, HEIGHT / 2]
+vel = [0, 0]
+
+# define event handlers
+def draw(canvas):
+    # Update ball position
+    ball_pos[0] += vel[0]
+    ball_pos[1] += vel[1]
+
+    # Draw ball
+    canvas.draw_circle(ball_pos, BALL_RADIUS, 2, "Red", "White")
+
+def keydown(key):
+    acc = 1
+    if key==simplegui.KEY_MAP["left"]:
+        vel[0] -= acc
+    elif key==simplegui.KEY_MAP["right"]:
+        vel[0] += acc
+    elif key==simplegui.KEY_MAP["down"]:
+        vel[1] += acc
+    elif key==simplegui.KEY_MAP["up"]:
+        vel[1] -= acc
+        
+    print ball_pos
+
+# create frame 
+frame = simplegui.create_frame("Velocity ball control", WIDTH, HEIGHT)
+
+# register event handlers
+frame.set_draw_handler(draw)
+frame.set_keydown_handler(keydown)
+
+# start frame
+frame.start()
+```
