Created 4_pong.md and .py, Modified: 1.5.4b.1 y .2

--- a/Courses/Course_1/Module_5/Week_4b/1.5.4b.2 - Visualizing List and Mutation.md
+++ b/Courses/Course_1/Module_5/Week_4b/1.5.4b.2 - Visualizing List and Mutation.md
@@ -7,13 +7,13 @@ Modules:
 Lessons:
   - 1.5.4b - Week 4b - Keyboard Control
 Instructors:
-  - Joe Warren
+  - John Greiner
 University: Rice University
 Finish:
 ---
 # Introducción
 
-En esta clase se hablará sobre control de dirección de los objetos, controlando la velocidad en la que los objetos se mueven.
+
 
 > [!Notas] #### Example 1.5.4b.1.1 - Code Link
 > 
