Modified: List methods

--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.3 - List methods.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.3 - List methods.md
@@ -13,7 +13,7 @@ Finish:
 ---
 # Introducción
 
-en la anterior clase sobre listas, vimos la forma de lista más básica, las **listas enlazadas fijas**, se pueden modificar, acceder a ellas, sólo eso. 
+En la anterior clase sobre listas, vimos la forma de lista más básica, las **listas enlazadas fijas**, se pueden modificar, acceder a ellas, sólo eso. 
 
 En esta clase hablaremos un poco más sobre las capacidades de las listas, como añadir o eliminar elementos de forma dinámica, cambiando su tamaño mientas el programa se ejecuta.
 
@@ -34,7 +34,7 @@ print lst[2]    # => output: -6
 print lst[-1]    # => output: 8 
 ```
  
- Podemos acceder a cada uno de los elementos de la lista `lst` desde el primer elemento, o desde el últimos, como se muestra en e ejemplo **2.1.5a.3.1**.
+ Podemos acceder a cada uno de los elementos de la lista `lst` desde el primer elemento, o desde el últimos, como se muestra en el ejemplo **2.1.5a.3.1**.
 ### Métodos `in` e `index`
 
 #### `in`
@@ -53,17 +53,35 @@ if 4 in lst:
 ```
 #### `index`
 
-El método `index`te devuelve el indice del elementos, si es el primer elemento te retornará un $0$ o si es el tercer elemento te retornará un $2$, etc:
+El método `index` te devuelve el indice del elementos (el lugar exacto de dicho elemento), si es el primer elemento te retornará un $0$ o si es el tercer elemento te retornará un $2$, etc:
 
 **Code example 2.1.5a.3.3: "`index`" Method**
 
 ```python
-lst index(8)    # => output: 5 
-lst index(4)    # => output: 3
+lst.index(8)    # => output: 5 
+lst.index(4)    # => output: 3
 ```
+### `append` and `pop` methods
+#### `append`
 
+El método `append`permite modificar la lista, agregando un nuevo elemento al final, a diferencia de hacerlo con la modificación directa, que cambia el elemento de la lista en la posición que elegimos (**Code example 2.1.5a.3.4**):
 
+**Code example 2.1.5a.3.4: "`append`" Method**
 
+```python
+lst = [1, 82, -6, 4, 5, 8]
+lst[2] = 5    # => output: lst = [1, 82, 5, 4, 5, 8]
+lst.append(632)    # => output: lst = [1, 82, -6, 4, 5, 8, 632]
+```
+#### `pop`
+
+El método `pop` elimina el elemento de la lista, si existe, incluso se puede eliminar la lista completa (**Code example 2.1.5a.3.5**):
+
+**Code example 2.1.5a.3.5: "`append`" Method**
+
+```python
+lst.append(632)    # => output: lst = [1, 82, -6, 4, 5, 8]
+```
 ---
 **Question 2.1.5a.2.1**
 
