Modified: List Methods, Created: List Examples, Excalidraw directory

--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
@@ -9,13 +9,11 @@ Lessons:
 Instructors:
   - Scott Rixner
 University: Rice University
-Finish: true
+Finish:
 ---
 # Introducción
 
-En la anterior clase sobre listas, vimos la forma de lista más básica, las **listas enlazadas fijas**, se pueden modificar, acceder a ellas, sólo eso. 
 
-En esta clase hablaremos un poco más sobre las capacidades de las listas, como añadir o eliminar elementos de forma dinámica, cambiando su tamaño mientas el programa se ejecuta.
 
 > [!Notes] #### Lists Documentation
 >
@@ -117,7 +115,7 @@ explanation - Handler function `remove_name()`**
 
 > [!Notes] #### Example 2.1.5a.3.6 - Code Link
 >
-> https://py2.codeskulptor.org/#examples-list_methods.py
+> [https://py2.codeskulptor.org/#examples-mouse_input.py](https://py2.codeskulptor.org/#examples-mouse_input.py)
 
 **Code example 2.1.5a.3.5: List Methods**
 
@@ -190,4 +188,4 @@ frame.start()
 ---
 # Course video link
 
-1. [List Methods](https://www.coursera.org/learn/interactive-python-2/lecture/82S5B/list-methods)
+1. [List Examples](https://www.coursera.org/learn/interactive-python-2/lecture/ZAwKX/list-examples)
