Modified: List methods, List examples; created fugures

--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.3 - List methods.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.3 - List methods.md
@@ -96,7 +96,7 @@ Creamos una lista vacía llamada `tasks`, y una función (handler) que  almacene
 **Figure 2.1.5a.3.1: Code example 2.1.5a.3.5 
 explanation**
 
-![[Figure 2.1.5a.3.1.]]
+![[Figure 2.1.5a.3.1]]
 #### Handler function - `remove_num()`
 
 Para eliminar un elemento de la lista, a partir del indice del elemento, debemos primero convertir el indice (`n`) en un entero, es necesario que exista al menos una tarea o elemento en la lista, para eso primero verificamos que exista un elemento mayor que $0$ en la lista con una condicional, y también verificamos que el numero que ingresamos en el evento de input, sea menor que la longitud total de la lista, si esas dos condiciones se cumplen, lo que ocurre es que elimino el elemento `n - 1`, ya que el primer elemento en realidad es 0, no 1, de tal forma que el numero que yo ingreso le debo restar $1$, para evitar errores (**Figure 2.1.5a.3.2**), por ejemplo, si intento eliminar el primer elemento de la lista que se registra con el número $1$, el indice de ese elemento en la lista es igual a 0, por tanto, para que Python identifique el indice del elemento, debo restarle un numero a mi entrada.
@@ -104,7 +104,7 @@ Para eliminar un elemento de la lista, a partir del indice del elemento, debemos
 **Figure 2.1.5a.3.2: Code example 2.1.5a.3.5 
 explanation - Handler function `remove_num()`**
 
-![[Excalidraw/Figure 2.1.5a.3.2.]]
+![[Figure 2.1.5a.3.2]]
 
 #### Handler function - `remove_name()`
 
@@ -113,7 +113,7 @@ La función `remove_name()`, primero verifica que el input que ingresamos sea ig
 **Figure 2.1.5a.3.3: Code example 2.1.5a.3.5 
 explanation - Handler function `remove_name()`**
 
-![[Excalidraw/Figure 2.1.5a.3.3.]]
+![[Figure 2.1.5a.3.3]]
 
 > [!Notes] #### Example 2.1.5a.3.6 - Code Link
 >
