--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
@@ -13,159 +13,82 @@ Finish:
 ---
 # Introducción
 
+Veremos algunos ejemplos de listas, nos ayudará a entenderlas de mejor forma, veremos como utilizarlas en programas GUI sencillos y como interactúan con las clases de elementos en un programa interactivo.
+
+## List Examples
+
+Tomáremos como punto de partida el código (**Code example 2.1.5a.2.4**) de ejemplo de la clase [2.1.5a.2 - Mouse input](obsidian://open?vault=Fundamentals%20of%20Computing%20Specialization%20-%20Rice%20University&file=Courses%2FCourse_2%2FModule_1%2FWeek_5a%2F2.1.5a.2%20-%20Mouse%20input), para construir un programa un poco diferente.
+## Global Variables
+
+Creamos una lista varía (`ball_list`), donde se almacenarán los valores de las coordenadas de cada una de las pelotas que se dibujen al dar click en el canvas (**Figure 2.1.51.4.1**).
+## Helper (`click()`) function
+
+Modificamos la función `click()`, seguimos pasando el parámetro `pos` que toma las coordenadas del lugar en donde demos click dentro del canvas, y con el método `append` almacenaremos las coordenadas en la lista `ball_list` (**Figure 2.1.51.4.1**).
+
+**Figure 2.1.5a.4.1: Code example 2.1.5a.4.1 
+explanation - global variables and helper function**
+
+![[Figure 2.1.5a.4.1]]
+## Draw handler function - `draw(canvas)`
 
 
-> [!Notes] #### Lists Documentation
+
+**Figure 2.1.5a.4.2. Code example 2.1.5a.3.5 
+explanation - Draw handler function - `draw(canvas)`**
+
+![[Figure 2.1.5a.4.2]]
+
+---
+
+> [!Notes] #### Example 2.1.5a.4.1 - Code Link
 >
-> Es necesario revisar la documentación para ver todos los métodos disponibles para modificar las listas.
-> 
-> [CodeSkulptor - Documentation - Lists](https://py2.codeskulptor.org/docs.html#tabs-Python)
-## Lists Methods
+> http://www.codeskulptor.org/#examples-list_of_balls.py
 
-Veamos el siguiente ejemplo:
-
-**Code example 2.1.5a.3.1: Lista "`lst`"**
+**Code example 2.1.5a.4.1. List of balls examples**
 
 ```python
-lst = [1, 82, -6, 4, 5, 8]
-print lst[2]    # => output: -6 
-print lst[-1]    # => output: 8 
-```
- 
- Podemos acceder a cada uno de los elementos de la lista `lst` desde el primer elemento, o desde el últimos, como se muestra en el ejemplo **2.1.5a.3.1**.
-### `in` and `index` Methods
-
-#### `in`
-
-Con este método comprobamos si existe o no un elemento en nuestra lista, y nos devuelve un valor booleano (`True` o `False`):
-
-**Code example 2.1.5a.3.2: "`in`" Method**
-
-```python
-# 82 in lst => T/F
-
-if 4 in lst:
-	print "4 is there!"
-
-# output: True
-```
-#### `index`
-
-El método `index` te devuelve el indice del elementos (el lugar exacto de dicho elemento), si es el primer elemento te retornará un $0$ o si es el tercer elemento te retornará un $2$, etc:
-
-**Code example 2.1.5a.3.3: "`index`" Method**
-
-```python
-lst.index(8)    # => output: 5 
-lst.index(4)    # => output: 3
-```
-### `append` and `pop` methods
-#### `append`
-
-El método `append`permite modificar la lista, agregando un nuevo elemento al final, a diferencia de hacerlo con la modificación directa, que cambia el elemento de la lista en la posición que elegimos (**Code example 2.1.5a.3.4**):
-
-**Code example 2.1.5a.3.4: "`append`" Method**
-
-```python
-lst = [1, 82, -6, 4, 5, 8]
-lst[2] = 5    # => output: lst = [1, 82, 5, 4, 5, 8]
-lst.append(632)    # => output: lst = [1, 82, -6, 4, 5, 8, 632]
-```
-#### `pop`
-
-El método `pop` elimina el elemento de la lista, de acuerdo al indice que seleccionamos, si seleccionamos el indice $0$, eliminamos el primer elemento, y con el indice $2$, eliminamos el tercer elemento (**Code example 2.1.5a.3.5**), etc:
-
-**Code example 2.1.5a.3.5: "`append`" Method**
-
-```python
-lst.pop()    # => output: lst = [632]
-lst.pop(4)    # => output: lst = [1, 82, 5, 5, 8]
-```
-
-## Examples - Lists Methods
-
-Crearemos un administrador de tareas sencillo, que nos permitirá agregar una nueva tarea, eliminar una tarea por su numero, y otro que que las elimine por su nombre, así como un botón para eliminar todo.
-
-### Examples Explanation - Lists Methods
-#### Handler function - `new()`
-
-Creamos una lista vacía llamada `tasks`, y una función (handler) que  almacene las tareas (`task`) creadas en esa lista, y registramos la función en el event handler de eventos de input, para que podamos ingresar las tareas que necesitemos (**Figure 2.1.5a.3.1**).
-
-**Figure 2.1.5a.3.1: Code example 2.1.5a.3.5 
-explanation**
-
-![[Figure 2.1.5a.3.1.]]
-#### Handler function - `remove_num()`
-
-Para eliminar un elemento de la lista, a partir del indice del elemento, debemos primero convertir el indice (`n`) en un entero, es necesario que exista al menos una tarea o elemento en la lista, para eso primero verificamos que exista un elemento mayor que $0$ en la lista con una condicional, y también verificamos que el numero que ingresamos en el evento de input, sea menor que la longitud total de la lista, si esas dos condiciones se cumplen, lo que ocurre es que elimino el elemento `n - 1`, ya que el primer elemento en realidad es 0, no 1, de tal forma que el numero que yo ingreso le debo restar $1$, para evitar errores (**Figure 2.1.5a.3.2**), por ejemplo, si intento eliminar el primer elemento de la lista que se registra con el número $1$, el indice de ese elemento en la lista es igual a 0, por tanto, para que Python identifique el indice del elemento, debo restarle un numero a mi entrada.
-
-**Figure 2.1.5a.3.2: Code example 2.1.5a.3.5 
-explanation - Handler function `remove_num()`**
-
-![[Excalidraw/Figure 2.1.5a.3.2.]]
-
-#### Handler function - `remove_name()`
-
-La función `remove_name()`, primero verifica que el input que ingresamos sea igual al nombre de la tarea, y posteriormente lo elimina con el método `remove`, ademas se usa el método `in`, que permite hacer identificar elementos dentro de la lista (revisar el apartado **`in` and `index` Methods**) (**Figure 2.1.5a.3.3**).
-
-**Figure 2.1.5a.3.3: Code example 2.1.5a.3.5 
-explanation - Handler function `remove_name()`**
-
-![[Excalidraw/Figure 2.1.5a.3.3.]]
-
-> [!Notes] #### Example 2.1.5a.3.6 - Code Link
->
-> [https://py2.codeskulptor.org/#examples-mouse_input.py](https://py2.codeskulptor.org/#examples-mouse_input.py)
-
-**Code example 2.1.5a.3.5: List Methods**
-
-```python
-# Simple task list
+# Examples of mouse input
 
 import simplegui
+import math
 
-tasks = []
+# intialize globals
+width = 450
+height = 300
+ball_list = []
+ball_radius = 15
+ball_color = "Red"
 
-# Handler for button
-def clear():
-    global tasks
-    tasks = []
-    
-# Handler for new task
-def new(task):
-    tasks.append(task)
-    
-# Handler for remove number
-def remove_num(tasknum):
-    n = int(tasknum)
-    if n > 0 and n <= len(tasks):
-        tasks.pop(n-1)
+# helper function
+def distance(p, q):
+    return math.sqrt((p[0] - q[0]) ** 2 + (p[1] - q[1]) ** 2)
 
-# Handler for remove name
-def remove_name(taskname):
-    if taskname in tasks:
-        tasks.remove(taskname)
-    
-# Handler to draw on canvas
+# define event handler for mouse click, draw
+def click(pos):
+    ball_list.append(pos)
+#    if distance(ball_pos, pos) < ball_radius:
+#        if ball_color == "Red":
+#            ball_color = "Green"
+#    else:
+#        ball_pos = [pos[0], pos[1]]
+#        ball_color = "Red"
+
 def draw(canvas):
-    n = 1
-    for task in tasks:
-        pos = 30 * n
-        canvas.draw_text(str(n) + ": " + task, [5, pos], 24, "White")
-        n += 1
-        
-# Create a frame and assign callbacks to event handlers
-frame = simplegui.create_frame("Task List", 600, 400)
-frame.add_input("New task:", new, 200)
-frame.add_input("Remove task number:", remove_num, 200)
-frame.add_input("Remove task:", remove_name, 200)
-frame.add_button("Clear All", clear)
+    for ball_pos in ball_list:
+        canvas.draw_circle(ball_pos, ball_radius, 1, "Black", ball_color)
+    
+# create frame
+frame = simplegui.create_frame("Mouse selection", width, height)
+frame.set_canvas_background("White")
+
+# register event handler
+frame.set_mouseclick_handler(click)
 frame.set_draw_handler(draw)
 
-# Start the frame animation
+# start frame
 frame.start()
-```
 
+```
 
 ---
 **Question 2.1.5a.2.1**
