Modified: List examples.md

--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
@@ -31,7 +31,11 @@ explanation - global variables and helper function**
 ![[Figure 2.1.5a.4.1]]
 ## Draw handler function - `draw(canvas)`
 
+### Iteración
 
+La **iteración** es la capacidad de ejecutar un programa a través de una lista, las iteraciones se lleva a cabo a través de un bucle (`for`).
+
+En el ejemplo tendremos que iterar sobre la lista "`ball_list`" que se creó al inicio, y con el uso del método `in`, comprobaremos si existe un valor (`ball_pos`) en la lista, si el valor que nos devuelve es `True`, entonces creará un circulo en las coordenadas guardadas en la lista `ball_list` (**Figure 2.1.51.4.2**).
 
 **Figure 2.1.5a.4.2. Code example 2.1.5a.3.5 
 explanation - Draw handler function - `draw(canvas)`**
