--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
@@ -17,33 +17,47 @@ Veremos algunos ejemplos de listas, nos ayudará a entenderlas de mejor forma, v
 
 ## List Examples
 
+### Example I
+
 Tomáremos como punto de partida el código (**Code example 2.1.5a.2.4**) de ejemplo de la clase [2.1.5a.2 - Mouse input](obsidian://open?vault=Fundamentals%20of%20Computing%20Specialization%20-%20Rice%20University&file=Courses%2FCourse_2%2FModule_1%2FWeek_5a%2F2.1.5a.2%20-%20Mouse%20input), para construir un programa un poco diferente.
-## Global Variables
+#### Global Variables
 
 Creamos una lista varía (`ball_list`), donde se almacenarán los valores de las coordenadas de cada una de las pelotas que se dibujen al dar click en el canvas (**Figure 2.1.51.4.1**).
-## Helper (`click()`) function
+#### `click()` function
 
 Modificamos la función `click()`, seguimos pasando el parámetro `pos` que toma las coordenadas del lugar en donde demos click dentro del canvas, y con el método `append` almacenaremos las coordenadas en la lista `ball_list` (**Figure 2.1.51.4.1**).
 
 **Figure 2.1.5a.4.1: Code example 2.1.5a.4.1 
-explanation - global variables and helper function**
+explanation - global variables and `click()` function**
 
 ![[Figure 2.1.5a.4.1]]
-## Draw handler function - `draw(canvas)`
+#### Draw handler function - `draw(canvas)`
 
-### Iteración
+##### Iteración
 
 La **iteración** es la capacidad de ejecutar un programa a través de una lista, las iteraciones se lleva a cabo a través de un bucle (`for`).
 
 En el ejemplo tendremos que iterar sobre la lista "`ball_list`" que se creó al inicio, y con el uso del método `in`, comprobaremos si existe un valor (`ball_pos`) en la lista, si el valor que nos devuelve es `True`, entonces creará un circulo en las coordenadas guardadas en la lista `ball_list` (**Figure 2.1.51.4.2**).
 
-**Figure 2.1.5a.4.2. Code example 2.1.5a.3.5 
+**Figure 2.1.5a.4.2. Code example 2.1.5a.4.1 
 explanation - Draw handler function - `draw(canvas)`**
 
 ![[Figure 2.1.5a.4.2]]
+### Example II
+#### Global Variables
+
+A partir del ejemplo anterior (**Code example 2.1.5a.4.1**)
+#### `click()` function
+
+
+
+**Figure 2.1.5a.4.3. Code example 2.1.5a.4.2 
+explanation - Draw handler function - `draw(canvas)`**
+
+![[Figure 2.1.5a.4.3]]
+
 
 ---
-
 > [!Notes] #### Example 2.1.5a.4.1 - Code Link
 >
 > http://www.codeskulptor.org/#examples-list_of_balls.py
@@ -83,6 +97,60 @@ def draw(canvas):
     
 # create frame
 frame = simplegui.create_frame("Mouse selection", width, height)
+frame.set_canvas_background("White")
+
+# register event handler
+frame.set_mouseclick_handler(click)
+frame.set_draw_handler(draw)
+
+# start frame
+frame.start()
+
+```
+
+---
+> [!Notes] #### Example 2.1.5a.4.2 - Code Link
+>
+> https://py2.codeskulptor.org/#examples-list_selection.py
+
+**Code example 2.1.5a.4.1. List selection example**
+
+```Python
+# Examples of mouse input
+
+import simplegui
+import math
+
+# intialize globals
+width = 450
+height = 300
+ball_list = []
+ball_radius = 15
+
+# helper function
+def distance(p, q):
+    return math.sqrt((p[0] - q[0]) ** 2 + 
+					(p[1] - q[1])** 2)
+
+# define event handler for mouse click, draw
+def click(pos):
+    changed = False
+    for ball in ball_list:
+        if distance([ball[0], ball[1]], pos) < ball_radius:
+            ball[2] = "Green"
+            changed = True
+
+    if not changed:
+        ball_list.append([pos[0], pos[1], "Red"])
+
+def draw(canvas):
+    for ball in ball_list:
+        canvas.draw_circle([ball[0], ball[1]], ball_radius, 1, "Black", ball[2])
+    
+# create frame
+frame = simplegui.create_frame("Mouse selection",
+								width, 
+								height)
 frame.set_canvas_background("White")
 
 # register event handler
