Modified: Loist examples, Creted figures

--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
@@ -46,16 +46,35 @@ explanation - Draw handler function - `draw(canvas)`**
 ### Example II
 #### Global Variables
 
+Ahora vamos a eliminar las pelotas que creemos en la pantalla
+#### `click()` function
+
+**Figure 2.1.5a.4.3. Code example 2.1.5a.4.2 
+explanation - Global variables and `click()` function**
+
+![[Figure 2.1.5a.4.3]]
+#### Draw handler function - `draw(canvas)`
+
+**Figure 2.1.5a.4.4. Code example 2.1.5a.4.2 
+explanation - Draw handler function - `draw(canvas)`**
+
+![[Figure 2.1.5a.4.4]]
+### Example III
+#### Global Variables
+
 A partir del ejemplo anterior (**Code example 2.1.5a.4.1**)
 #### `click()` function
 
+**Figure 2.1.5a.4.5. Code example 2.1.5a.4.3 
+explanation - Global variables and `click()` function**
 
+![[Figure 2.1.5a.4.5]]
+#### Draw handler function - `draw(canvas)`
 
-**Figure 2.1.5a.4.3. Code example 2.1.5a.4.2 
+**Figure 2.1.5a.4.6. Code example 2.1.5a.4.3 
 explanation - Draw handler function - `draw(canvas)`**
 
-![[Figure 2.1.5a.4.3]]
-
+![[Figure 2.1.5a.4.6]]
 
 ---
 > [!Notes] #### Example 2.1.5a.4.1 - Code Link
@@ -151,6 +170,60 @@ def draw(canvas):
 frame = simplegui.create_frame("Mouse selection",
 								width, 
 								height)
+frame.set_canvas_background("White")
+
+# register event handler
+frame.set_mouseclick_handler(click)
+frame.set_draw_handler(draw)
+
+# start frame
+frame.start()
+
+```
+
+---
+> [!Notes] #### Example 2.1.5a.4.3 - Code Link
+>
+> http://www.codeskulptor.org/#examples-list_removal.py
+
+**Code example 2.1.5a.4.1. List removal example**
+
+```python
+# Examples of mouse input
+
+import simplegui
+import math
+
+# intialize globals
+width = 450
+height = 300
+ball_list = []
+ball_radius = 15
+ball_color = "Red"
+
+# helper function
+def distance(p, q):
+    return math.sqrt((p[0] - q[0]) ** 2 + (p[1] - q[1]) ** 2)
+
+# define event handler for mouse click, draw
+def click(pos):
+    remove = []
+    for ball in ball_list:
+        if distance(ball, pos) < ball_radius:
+            remove.append(ball)
+
+    if remove == []:
+        ball_list.append(pos)
+    else:
+        for ball in remove:
+            ball_list.pop(ball_list.index(ball))
+
+def draw(canvas):
+    for ball in ball_list:
+        canvas.draw_circle([ball[0], ball[1]], ball_radius, 1, "Black", ball_color)
+    
+# create frame
+frame = simplegui.create_frame("Mouse selection", width, height)
 frame.set_canvas_background("White")
 
 # register event handler
