Modified: List example, and figures, created: Iteration and figures

--- a/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
+++ b/Courses/Course_2/Module_1/Week_5a/2.1.5a.4 - List Examples.md
@@ -17,7 +17,7 @@ Veremos algunos ejemplos de listas, nos ayudará a entenderlas de mejor forma, v
 
 ## List Examples
 
-### Example I
+### Example I - List of balls
 
 Tomáremos como punto de partida el código (**Code example 2.1.5a.2.4**) de ejemplo de la clase [2.1.5a.2 - Mouse input](obsidian://open?vault=Fundamentals%20of%20Computing%20Specialization%20-%20Rice%20University&file=Courses%2FCourse_2%2FModule_1%2FWeek_5a%2F2.1.5a.2%20-%20Mouse%20input), para construir un programa un poco diferente.
 #### Global Variables
@@ -43,7 +43,7 @@ En el ejemplo tendremos que iterar sobre la lista "`ball_list`" que se creó al 
 explanation - Draw handler function - `draw(canvas)`**
 
 ![[Figure 2.1.5a.4.2]]
-### Example II
+### Example II - List selection
 #### Global Variables
 
 Ahora vamos a eliminar las pelotas que creemos en la pantalla
@@ -59,7 +59,7 @@ explanation - Global variables and `click()` function**
 explanation - Draw handler function - `draw(canvas)`**
 
 ![[Figure 2.1.5a.4.4]]
-### Example III
+### Example III - List removal
 #### Global Variables
 
 A partir del ejemplo anterior (**Code example 2.1.5a.4.1**)
@@ -69,12 +69,6 @@ A partir del ejemplo anterior (**Code example 2.1.5a.4.1**)
 explanation - Global variables and `click()` function**
 
 ![[Figure 2.1.5a.4.5]]
-#### Draw handler function - `draw(canvas)`
-
-**Figure 2.1.5a.4.6. Code example 2.1.5a.4.3 
-explanation - Draw handler function - `draw(canvas)`**
-
-![[Figure 2.1.5a.4.6]]
 
 ---
 > [!Notes] #### Example 2.1.5a.4.1 - Code Link
@@ -236,22 +230,18 @@ frame.start()
 ```
 
 ---
-**Question 2.1.5a.2.1**
+**Question 2.1.5a.4.1**
 
-> [!Question] #### What is the value of `lst` after the following code executes? 
+> [!Question] #### What does the following Python construct do?
 > 
 > ```python
-> lst = [4, 9, 17]
-> lst.append(32)
-> lst.pop(0)
-> if 4 in lst:
->   lst.append(9)
+> for x in y:
+> 	...loop body...
 > ```
 > **Correct**:
 > 
-> `[9, 17, 32]`
+> The loop body will execute once for each element of the list `y` and the loop body will have access to that element as `x`.
 > 
-> The appendappendstart verbatim, append, end verbatim method adds 32 to the end of the list. The poppopstart verbatim, pop, end verbatim method then remove the 0th element of the list. Since 4 was just removed, it is no longer in the list, so the condition of the ififstart verbatim, if, end verbatim statement is false.
 
 ---
 # Course video link
